--- a/package.json
+++ b/package.json
@@ -1,37 +1,45 @@
 {
-  "name": "monika-kumari",
+  "name": "monika-portfolio",
   "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "node ./server.js"
   },
   "engines": {
-    "node": "^12.18.3",
-    "npm": "^6.0.0"
+    "node": "^16.13.2",
+    "npm": "^8.1.2"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
     "bootstrap": "^4.6.1",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-session": "^1.17.2",
     "http-errors": "~1.6.3",
     "jquery": "^3.5.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.2.3",
     "morgan": "~1.9.1",
+    "passport": "^0.5.2",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.1.0",
     "popper.js": "^1.16.1"
   },
-  "main": "app.js",
-  "devDependencies": {},
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/singhmoni/portfolio.git"
-  },
-  "author": "monika kumari",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/singhmoni/portfolio/issues"
-  },
-  "homepage": "https://github.com/singhmoni/portfolio#readme",
-  "description": "portfolio"
+  "devDependencies": {
+    "@types/connect-flash": "^0.0.37",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.4",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/mongoose": "^5.11.97",
+    "@types/passport": "^1.0.7",
+    "@types/passport-jwt": "^3.0.6",
+    "@types/passport-local": "^1.0.34",
+    "@types/passport-local-mongoose": "^6.1.0"
+  }
 }
